[gd_scene load_steps=13 format=3 uid="uid://d2g1x0qdp7hul"]

[ext_resource type="PackedScene" uid="uid://bsdasajr1cjh8" path="res://special_scenes/combat_UI/session_points/Stat.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://ccvffra4l23u7" path="res://assets/patterns/stripes_duotone_lighter.png" id="3"]
[ext_resource type="PackedScene" uid="uid://b8llrhhkcnyfh" path="res://special_scenes/combat_UI/session_points/Headshot.tscn" id="3_d6jt3"]
[ext_resource type="Texture2D" uid="uid://dhxy8aoqproo8" path="res://assets/map/winner.png" id="4"]
[ext_resource type="Script" uid="uid://cya06sa82qft3" path="res://special_scenes/combat_UI/gameover/WinnerBanner.gd" id="5"]
[ext_resource type="Script" uid="uid://dau5ixccdil25" path="res://special_scenes/combat_UI/gameover/InsertName.gd" id="6"]
[ext_resource type="Theme" uid="uid://dui8cebqku8x5" path="res://interface/themes/olympic_theme.tres" id="7"]
[ext_resource type="FontFile" uid="uid://dprehv4eo4p4u" path="res://assets/fonts/Pixel-Powerline-440555/Pixel Powerline.otf" id="8"]
[ext_resource type="PackedScene" uid="uid://chegk33457388" path="res://special_scenes/combat_UI/gameover/LogoMinigame.tscn" id="9"]

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("8")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/14/0/ascent = 0.0
cache/0/14/0/descent = 0.0
cache/0/14/0/underline_position = 0.0
cache/0/14/0/underline_thickness = 0.0
cache/0/14/0/scale = 1.0

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("8")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/14/0/ascent = 0.0
cache/0/14/0/descent = 0.0
cache/0/14/0/underline_position = 0.0
cache/0/14/0/underline_thickness = 0.0
cache/0/14/0/scale = 1.0

[sub_resource type="FontFile" id="7"]
fallbacks = Array[Font]([ExtResource("8")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/14/0/ascent = 0.0
cache/0/14/0/descent = 0.0
cache/0/14/0/underline_position = 0.0
cache/0/14/0/underline_thickness = 0.0
cache/0/14/0/scale = 1.0

[node name="WinnerBanner" type="Control"]
custom_minimum_size = Vector2(360, 180)
layout_mode = 3
anchors_preset = 0
offset_right = 361.0
offset_bottom = 180.0
script = ExtResource("5")
minigame_logo = ExtResource("9")
headshot_scene = ExtResource("3_d6jt3")

[node name="Background" type="Polygon2D" parent="."]
unique_name_in_owner = true
position = Vector2(8, 32)
color = Color(0.219608, 0.219608, 0.219608, 0.901961)
texture = ExtResource("3")
polygon = PackedVector2Array(12.5, 162.5, 12.5, 12.5, 1062.5, 12.5, 1012.5, 162.5)

[node name="Shadow" type="Polygon2D" parent="."]
position = Vector2(8, 32)
color = Color(0, 0, 0, 0.313726)
polygon = PackedVector2Array(6.25, 156.25, 6.25, 6.25, 125, 6.25, 150, 156.25)

[node name="Container" type="HBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 0
anchor_right = 1.0
offset_left = 8.0
offset_top = 32.0
offset_right = 858.0
offset_bottom = 182.0

[node name="StatsContainer" type="GridContainer" parent="Container"]
visible = false
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 26
columns = 2

[node name="Stat2" parent="Container/StatsContainer" instance=ExtResource("2")]
layout_mode = 2
key = "kills"
stats_value = "0"

[node name="Stat3" parent="Container/StatsContainer" instance=ExtResource("2")]
layout_mode = 2
key = "deaths"
stats_value = "0"

[node name="Stat4" parent="Container/StatsContainer" instance=ExtResource("2")]
layout_mode = 2
key = "selfkills"
stats_value = "0"

[node name="Stat5" parent="Container/StatsContainer" instance=ExtResource("2")]
layout_mode = 2
key = "bombs"
stats_value = "0"

[node name="StarsContainer" type="GridContainer" parent="Container"]
unique_name_in_owner = true
visible = false
layout_mode = 2
columns = 3

[node name="LogoMinigame" parent="Container/StarsContainer" instance=ExtResource("9")]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1

[node name="PlayerName" type="Label" parent="Container"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("7")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = SubResource("5")
text = "SAX"
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="InsertName" type="LineEdit" parent="Container/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("7")
theme_override_fonts/font = SubResource("4")
placeholder_text = "P1 "
max_length = 10
script = ExtResource("6")

[node name="NameWrapper" type="Node2D" parent="Container"]
position = Vector2(160, 20)

[node name="InputWrapper" type="Node2D" parent="Container"]
position = Vector2(160, 20)

[node name="Champion" type="Sprite2D" parent="."]
visible = false
z_index = 200
z_as_relative = false
position = Vector2(68.75, 110)
scale = Vector2(1.4, 1.4)
texture = ExtResource("4")

[node name="WinnerOutline" type="Line2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(8, 32)
points = PackedVector2Array(43.75, -12.5, 125, -12.5, 156.25, 162.5, -12.5, 162.5, -12.5, -12.5, 43.75, -12.5)
width = 6.0
default_color = Color(1.3, 1.3, 1.3, 1)

[node name="DateWrapper" type="Node2D" parent="."]
position = Vector2(170, 150)

[node name="DateSession" type="Label" parent="DateWrapper"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 14.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = SubResource("7")
text = "2022-10-23 15:00"

[connection signal="name_inserted" from="Container/HBoxContainer/InsertName" to="." method="_on_InsertName_name_inserted"]
